tests/snapshots/test_runner__tests__compiler__typecheck__module_cannot_use_non_public_symbol__hello.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
import "./foo"

entry
  // Error: [bar] is not public
  bar print

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/module_cannot_use_non_public_symbol/hello.kk:5:3
  │
5 │   bar print
  │   ^^^ Unknown variable `bar`
  │
  = Cannot find this value symbol in the current scope
